--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,65 +1,3 @@
 <div class="mx-auto container w-1/5 mt-52">
-  <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
-    <h1 class="text-center mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{title}}</h1>
-    <label class="mb-2 text-sm font-medium text-gray-900 dark:text-white">Username</label>
-    <div class="flex">
-      <span
-        class="inline-flex items-center px-3 text-sm text-gray-900 bg-gray-200 border border-r-0 border-gray-300 rounded-l-md dark:bg-gray-600 dark:text-gray-400 dark:border-gray-600">@</span>
-      <input
-        type="text"
-        placeholder="torvalds"
-        [(ngModel)]="userName"
-        class="rounded-none rounded-r-lg bg-gray-50 border text-gray-900 focus:ring-blue-500 focus:border-blue-500 block flex-1 min-w-0 w-full text-sm border-gray-300 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-
-      <button (click)="search()"
-              class=" ml-2 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-        Search
-        <svg class="w-4 h-4 ml-2 -mr-1"
-             fill="currentColor"
-             viewBox="0 0 20 20"
-             xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd"
-                d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-                clip-rule="evenodd">
-          </path>
-        </svg>
-      </button>
-    </div>
-  </div>
-
-
-  <div *ngIf="response"
-       class="mt-3 w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
-    <div class="mt-4 flex flex-col items-center pb-10">
-      <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="{{response.avatar_url}}" alt="{{response.name}}"/>
-      <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">{{response.login}}</h5>
-      <span class="text-center text-sm text-gray-500 dark:text-gray-400">{{response.bio}}</span>
-      <div class="flex mt-4 space-x-3 md:mt-6">
-        <button
-          (click)="modalService.open()"
-          data-dropdown-toggle="dropdownLeft" data-dropdown-placement="left"
-          class="mb-3 md:mb-0 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-          type="button">
-          <svg class="mr-2 w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-               xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-                  d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                  clip-rule="evenodd"></path>
-          </svg>
-          More
-        </button>
-        <a href="{{response.html_url}}" target="_new"
-           class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-gray-900 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-700 dark:focus:ring-gray-700">Github
-          Link</a>
-      </div>
-    </div>
-    <div>
-    </div>
-  </div>
-
-  <app-modal *ngIf="modalService.isVisible$ | async " >
-<!--    <h1>Hello I'm {{response.name}}</h1>-->
-    <h1 class="text-2xl text-blue-500">Coming Soon....</h1>
-  </app-modal>
-
+  <app-form></app-form>
 </div>
